--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,17 @@ dependencies {
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-apt'
 
+	//security 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+
+	
 	compileOnly 'org.projectlombok:lombok'
 	//runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
