--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	implementation "io.springfox:springfox-swagger-ui:3.0.0"
 	implementation "org.modelmapper:modelmapper:2.4.5"
 
+	//modelMapper
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa'
 	//querydsl 추가
@@ -45,7 +48,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 
-	
+	//MyBatis
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+
 	compileOnly 'org.projectlombok:lombok'
 	//runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
